--- a/index.html
+++ b/index.html
@@ -10,33 +10,61 @@
     <title>Document</title>
 </head>
 <body>
-        <nav class="navbar sticky-top navbar-light bg-light">
-                <a class="navbar-brand" href="#">Jonathon B Baker</a>
-        </nav>
+    <nav class="navbar navbar-dark bg-dark">
+        <h1>Jonathon B Baker</h1>
+      </nav>
               <br>
               <br>
               
         <div class="container">
                 <div class="container">
                         <div class="row">
-                            <h1>About Me</h1>
+                            <h2>About Me</h2>
                         </div>
+
                         <br>
+
                         <div class="row">
                             <div class="line">
                             </div>
                         </div>
+
                         <br>
+                        <br>
+                        <br>
+
                         <div class="row">
-                            <div class="col-3">
-                                One of three columns
+                            <div class="col-2"> 
+                                <img src="assets/MyPhoto.jpg">                              
                             </div>
-                            <div class="col-9">
-                                One of three columns
+                            <div class="col-10">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio eum facilis similique repellendus voluptates id libero, distinctio et velit omnis sit totam nisi reprehenderit placeat dolore assumenda, illum repudiandae quaerat?
+                                    Reiciendis, facere recusandae. Quo repellat dignissimos non iure reprehenderit dolor natus hic rerum libero debitis, nihil earum asperiores culpa blanditiis? Accusantium quam suscipit perspiciatis qui vel porro magni officiis ipsum?
+                                     voluptatum iusto! Quaerat vero minima necessitatibus accusantium animi. Deserunt quo modi esse maiores expedita eum, voluptas soluta, minima ducimus praesentium magni voluptatibus ab, fuga culpa quisquam sunt magnam?
+                                    Obcaecati ut beatae deserunt hic debitis tempore provident culpa repellendus dolor laborum fugiat sapiente eos neque ipsum modi in at voluptatem consectetur fugit voluptas quod labore, quas voluptate. Commodi, unde.
+                                </p>
                             </div>
                         </div>
+
+                        <br>
+
+                        <div class="row">
+                            <div class="col-6">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse corrupti in expedita et veritatis perferendis soluta accusamus deserunt atque. Libero eaque enim quod eligendi quis ipsam sunt magnam totam deleniti!
+                            Ullam voluptatum eos dicta atque sunt rem minima blanditiis error suscipit velit quasi harum saepe, molestiae, quod ut distinctio consequatur delectus placeat maiores deserunt animi qui reprehenderit! Cumque, mollitia quos.
+                            Quasi magnam explicabo tempora nobis nulla quibusdam hic asperiores ducimus quam! Accusamus quidem temporibus explicabo, doloribus laudantium natus architecto, enim placeat ut commodi nulla, similique sit voluptas culpa veritatis? Dignissimos!
+                            </div>
+                            <div class="col-6">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse corrupti in expedita et veritatis perferendis soluta accusamus deserunt atque. Libero eaque enim quod eligendi quis ipsam sunt magnam totam deleniti!
+                                    Ullam voluptatum eos dicta atque sunt rem minima blanditiis error suscipit velit quasi harum saepe, molestiae, quod ut distinctio consequatur delectus placeat maiores deserunt animi qui reprehenderit! Cumque, mollitia quos.
+                                    Quasi magnam explicabo tempora nobis nulla quibusdam hic asperiores ducimus quam! Accusamus quidem temporibus explicabo, doloribus laudantium natus architecto, enim placeat ut commodi nulla, similique sit voluptas culpa veritatis? Dignissimos!
+                             </div>
+                        </div>
+
+
+
                 </div>
         </div>
-              
+        <footer class="container-fluid w-100 bg-dark text-light py-3">
+                Copyright
+            </footer>
 </body>
 </html>
