--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 
-    <title>Document</title>
+    <title>About</title>
 </head>
 <body>
     <nav class="navbar navbar-dark bg-dark">
-        <h1>Jonathon B Baker</h1>
+        <div class="row">
+                <h1>Jonathon B Baker</h1>
+            <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
+        </div>
       </nav>
               <br>
               <br>
@@ -41,7 +46,6 @@
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio eum facilis similique repellendus voluptates id libero, distinctio et velit omnis sit totam nisi reprehenderit placeat dolore assumenda, illum repudiandae quaerat?
                                     Reiciendis, facere recusandae. Quo repellat dignissimos non iure reprehenderit dolor natus hic rerum libero debitis, nihil earum asperiores culpa blanditiis? Accusantium quam suscipit perspiciatis qui vel porro magni officiis ipsum?
                                      voluptatum iusto! Quaerat vero minima necessitatibus accusantium animi. Deserunt quo modi esse maiores expedita eum, voluptas soluta, minima ducimus praesentium magni voluptatibus ab, fuga culpa quisquam sunt magnam?
-                                    Obcaecati ut beatae deserunt hic debitis tempore provident culpa repellendus dolor laborum fugiat sapiente eos neque ipsum modi in at voluptatem consectetur fugit voluptas quod labore, quas voluptate. Commodi, unde.
                                 </p>
                             </div>
                         </div>
@@ -51,11 +55,9 @@
                         <div class="row">
                             <div class="col-6">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse corrupti in expedita et veritatis perferendis soluta accusamus deserunt atque. Libero eaque enim quod eligendi quis ipsam sunt magnam totam deleniti!
                             Ullam voluptatum eos dicta atque sunt rem minima blanditiis error suscipit velit quasi harum saepe, molestiae, quod ut distinctio consequatur delectus placeat maiores deserunt animi qui reprehenderit! Cumque, mollitia quos.
-                            Quasi magnam explicabo tempora nobis nulla quibusdam hic asperiores ducimus quam! Accusamus quidem temporibus explicabo, doloribus laudantium natus architecto, enim placeat ut commodi nulla, similique sit voluptas culpa veritatis? Dignissimos!
                             </div>
                             <div class="col-6">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse corrupti in expedita et veritatis perferendis soluta accusamus deserunt atque. Libero eaque enim quod eligendi quis ipsam sunt magnam totam deleniti!
                                     Ullam voluptatum eos dicta atque sunt rem minima blanditiis error suscipit velit quasi harum saepe, molestiae, quod ut distinctio consequatur delectus placeat maiores deserunt animi qui reprehenderit! Cumque, mollitia quos.
-                                    Quasi magnam explicabo tempora nobis nulla quibusdam hic asperiores ducimus quam! Accusamus quidem temporibus explicabo, doloribus laudantium natus architecto, enim placeat ut commodi nulla, similique sit voluptas culpa veritatis? Dignissimos!
                              </div>
                         </div>
 
