--- a/portfolio.html
+++ b/portfolio.html
@@ -63,8 +63,16 @@
         <br>
         <br>
         <br>
-        <footer class="container-fluid w-100 bg-dark text-light py-3">
-                Copyright
-            </footer>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <footer class="footer">  
+                        <span class="text-light">Copyright©</span>
+        </footer>
+            
 </body>
 </html>
