final revision...for now.

--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,7 @@
       </nav>
               <br>
               <br>
+              <!-- central container with white background. holds everything below navbar.-->
             <div class="container">
                 <form>
                         <div class="form-group">
@@ -50,10 +51,7 @@
         <br>
         <br>
         <footer class="footer">
-            <div class="fContainer">
-                    <span class="text-light">Copyright©</span>
-            </div>
-            
-            </footer>
+                    <span class="text-light">Copyright©</span>   
+        </footer>
 </body>
 </html>
