--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -42,7 +43,7 @@
                             <div class="col-2"> 
                                 <img src="assets/MyPhoto.jpg">                              
                             </div>
-                            <div class="col-10">
+                            <div class="col-md-10">
                                 <p>My name is Jonathon Baker. I’m married and have 3 kids. I graduated from the Academy of Art of San Francisco with a BFA in in Illustration in 2002. I have been working in art related fields ever since from Freelance illustration to graphic design. I’ve even dabbled in tattoos and animation
                                         from time to time and have always been interested in learning web design and coding. My artistic ambitions are never satisfied.
                                 </p>
@@ -52,12 +53,12 @@
                         <br>
 
                         <div class="row">
-                            <div class="col-6">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse corrupti in expedita et veritatis perferendis soluta accusamus deserunt atque. Libero eaque enim quod eligendi quis ipsam sunt magnam totam deleniti!
-                            Ullam voluptatum eos dicta atque sunt rem minima blanditiis error suscipit velit quasi harum saepe, molestiae, quod ut distinctio consequatur delectus placeat maiores deserunt animi qui reprehenderit! Cumque, mollitia quos.
+                            <div class="col-md-6">
+                                <p>Lorem ipsum, on the night when I became a wolf Esse corrupti in expedita et veritatis Nobody understands donuts. Libero eaque enim quod eligendi quis ipsam sunt magnam totam deleniti!
+                            Ullam voluptatum eos dicta atque sunt rem minima blanditiis error suscipit velit quasi harum saepe, molestiae, quod ut distinctio consequatplacemeat manitoba complimentary fushu maiores deserunt animi qui reprehenderit! Cumque, mollitia quos.
                             </p>
                             </div>
-                            <div class="col-6">
+                            <div class="col-md-6">
                                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse corrupti in expedita et veritatis perferendis soluta accusamus deserunt atque. Libero eaque enim quod eligendi quis ipsam sunt magnam totam deleniti!
                                     Ullam voluptatum eos dicta atque sunt rem minima blanditiis error suscipit velit quasi harum saepe, molestiae, quod ut distinctio consequatur delectus placeat maiores deserunt animi qui reprehenderit! Cumque, mollitia quos.
                                     </p>
@@ -76,9 +77,7 @@
         <br>
         <br>
         <footer class="footer">
-                <div class="fContainer">
                         <span class="text-">Copyright©</span>
-                </div>
         </footer>
 </body>
 </html>
