--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
                       </div>
                       <div class="col-md-4">
                         <div class="thumbnail">
-                            <img src="assets/32.jpg" alt="Perry Farrel" style="width:100%">             
+                            <img src="assets/32.jpg" alt="Perry Ferrel" style="width:100%">             
                         </div>
                         <br>
                       </div>
